--- a/app/templates/sign-up.html
+++ b/app/templates/sign-up.html
@@ -10,12 +10,12 @@
   <h3>Sign up</h3>
   <div class="mb-3">
     <label for="firstName" class="form-label">First Name</label>
-    <input type="text"class="form-control" id="firstName" name="FirstName">
+    <input type="text"class="form-control" id="FirstName" name="FirstName">
   </div>
   <div class="mb-3">
     <label for="email" class="form-label">Email address</label>
     <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    <div id="emailHelp" class="form-text"></div>
   </div>
   <div class="mb-3">
     <label for="password" class="form-label">Password</label>
