--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,11 +4,12 @@
                 <meta charset="uft-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-		<link href="./css/styles.css" rel="stylesheet" />
+		<link href="../static/css/styles.css" rel="stylesheet" />
                 <title>{% block title %}{% endblock %}</title>
         </head>
         <body>
                 {% block content %}
+
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container px-4 px-lg-5">
 				<a class="navbar-brand" hred="#">Foodie-fetch</a>
@@ -66,8 +67,9 @@
 		 <footer class="py-5 bg-dark">
 		   <div class="container"><p class="m-0 text-center text-white">foodie footer</p></div>
 		</footer>
-                {% endblock %}
 
                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+               {% endblock %}
         </body>
 </html>
