--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,6 +32,12 @@ width: 100%;
   margin: 6px 18px;
   position: relative;
 }
+
+.home-icon {
+  display: flex;
+  justify-content: center;
+}
+
 .marquee-text{
   font-size: 29px;
   font-weight: 600;
@@ -86,8 +92,10 @@ width: 100%;
   position: absolute;
   right: -8px;
   font-size: 12px;
+  flex: row;
+  justify-content: center;
   color: #eee;
-  background-color: #f02d34;
+  background-color: teal;
   width: 18px;
   height: 18px;
   border-radius: 50%;
@@ -145,7 +153,7 @@ width: 100%;
 .hero-banner-container button{
   border-radius: 20px;
   padding: 10px 16px;
-  background-color: #f02d34;
+  background-color: teal;
   width: 120px;
   color: white;
   border: none;
@@ -215,7 +223,7 @@ text-align: end;
 }
 .footer-banner-container{
   padding: 100px 40px;
-  background-color: #f02d34;
+  background-color: teal;
   border-radius: 15px;
   position: relative;
   height: 400px;
@@ -232,7 +240,7 @@ text-align: end;
   border-radius: 15px;
   padding: 10px 16px;
   background-color: white;
-  color: red;
+  color: teal;
   border: none;
   margin-top: 40px;
   font-size: 18px;
@@ -380,7 +388,7 @@ padding: 20px 10px;
 }
 .remove-item{
   font-size: 24px;
-  color: #f02d34;
+  color: teal;
   cursor: pointer;
   background: white;
   width: 40px;
@@ -390,8 +398,8 @@ padding: 20px 10px;
   position: absolute;
   bottom: 12px;
   right: 5px;
-width: 100%;
-padding: 30px 65px;
+  width: 100%;
+  padding: 30px 65px;
 
 }
 
@@ -409,7 +417,7 @@ padding: 30px 65px;
   margin-top: 10px;
   margin-top: 40px;
   text-transform: uppercase;
-  background-color: #f02d34;
+  background-color: teal;
   color: #fff;
   cursor: pointer;
     transform: scale(1, 1);
@@ -457,7 +465,7 @@ padding: 30px 65px;
   background-color:#f02d34;
 }
 .reviews{
-  color: #f02d34;
+  color: teal;
   margin-top: 10px;
   display: flex;
   gap: 5px;
@@ -478,7 +486,7 @@ padding: 30px 65px;
   font-weight: 700 ;
   font-size: 26px;
   margin-top: 30px;
-  color:#f02d34;
+  color: teal;
 }
 .price .old-price, .product-price .old-price, .price .old-price{
   color: gray;
@@ -496,12 +504,13 @@ padding: 30px 65px;
 }
 .buttons .add-to-cart{
   padding: 10px 20px;
-  border: 1px solid #f02d34 ;
+  border: 1px solid teal ;
   margin-top: 40px;
   font-size: 18px;
   font-weight: 500;
   background-color: white;
-  color: #f02d34;
+  color: teal;
+  border-radius: 15px;
   cursor: pointer;
   width: 200px;
    transform: scale(1, 1);
@@ -514,9 +523,9 @@ padding: 30px 65px;
   width: 200px;
 
   padding: 10px 20px;
-  background-color: #f02d34;
+  background-color: teal;
   color: white;
-  border: none;
+  border-radius: 15px;
   margin-top: 40px;
   font-size: 18px;
   font-weight: 500;
@@ -576,8 +585,8 @@ padding: 6px;
 }
 .success, .cancel{
   width: 1000px;
-margin: auto;
-margin-top: 160px;
+  margin: auto;
+  margin-top: 160px;
   background-color: #dcdcdc;
   padding: 50px;
   border-radius: 15px;
