--- a/frontend/src/signin.css
+++ b/frontend/src/signin.css
@@ -1,16 +1,20 @@
 .registration-container {
-    width: 300px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #fff;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-color: teal;
+    flex-direction: column;
   }
   
   h2 {
+    color: white;
     font-size: 24px;
     margin-bottom: 20px;
+  }
+  .link {
+    text-decoration: white;
+    color: white;
   }
   
   .input-container {
@@ -26,44 +30,51 @@
   }
   
   button {
-    width: 100%;
-    padding: 10px;
+    width: 95%;
+    /* padding: 10px;
     background-color: #007bff;
     color: #fff;
     border: none;
-    cursor: pointer;
+    cursor: pointer; */
     font-weight: bold;
+    padding: 10px;
+    border: none;
+    background-color: blue;
+    cursor: pointer;
+    color: white;
+    border-radius: 10px;
   }
   
   button:hover {
     background-color: #0056b3;
   }
   
-  .login-container {
-    width: 300px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #fff;
-    text-align: center;
-  }
-  
-  .input-container {
+  .log-input-container {
     margin-bottom: 15px;
-    text-align: left;
+    /* text-align: left; */
+    width: 215px;
+    /* padding: 10px; */
+    /* border: none; */
+    border-radius: 15px;
+    border-bottom: 1px solid gray;
   }
   
-  button {
+ .log-button {
     padding: 10px;
-    background-color: #007bff;
+    width: 215px;
+    background-color: blue;
     color: #fff;
     border: none;
     cursor: pointer;
     font-weight: bold;
   }
   
-  button:hover {
+  .log-link {
+    text-decoration: white;
+    color: white;
+  }
+
+  .log-button:hover {
     background-color: #0056b3;
   }
   
